feat(api): added pokemon api for testing
